# MobileNetV1-HLS

./: .gitignore  README.md
Basic_Src/: batchnorm.cpp  conv.cpp  depthwise.cpp  mobilenet_v1.cpp  mobilenet_v1.hpp  params.hpp  tb_mobilenetv1.cpp  transfer.cpp
FP32_Application/: vitis-comp.json
FP32_HLS/: hls_config.cfg  vitis-comp.json
FP32_Platform/: vitis-comp.json
FP32_SoC/: FP32_SoC.xpr
FP32_Src/: batchnorm.cpp  conv.cpp  depthwise.cpp  fc.cpp  gap.cpp  mobilenet_v1.cpp  pointwise.cpp  tb_mobilenetv1.cpp  transfer.cpp
Image-Data/: meta_test_n10000.txt
Inference/: FP32_debug_console.tcl  QAT_debug_console.tcl
QAT_Application/: vitis-comp.json
QAT_HLS/: hls_config.cfg  vitis-comp.json
QAT_Platform/: vitis-comp.json
QAT_Platform/hw/sdt/drivers/mobilenet_v1_qat_v1_0/src/: CMakeLists.txt  xmobilenet_v1_qat.c
QAT_SoC/: QAT_SoC.xpr  QAT_SoC_wrapper.xsa
QAT_Src/: conv.cpp  depthwise.cpp  fc.cpp  gap.cpp  mobilenet_v1_qat.cpp  mobilenet_v1_qat.hpp  pointwise.cpp  tb_mobilenetv1.cpp  transfer.cpp
Training_Src/: best_model.pth  best_qat_model.pth  export_bin.py  export_label.py  export_qat_params.py  params.hpp  params_qat.hpp  train_mobilenetv1.ipynb  training_history.csv  training_history_cont.csv  training_history_qat.csv
_ide/: .peers.ini  .vitisPlatformRepo.json  settings.json  version.ini  workspace_journal.py  workspace_journal_14033.py  workspace_journal_4068.py  workspace_journal_4086.py  workspace_journal_4146.py  workspace_journal_56391.py  workspace_journal_67085.py
hls/: batchnorm.cpp  batchnorm.h  conv.cpp  conv.h  depthwise.cpp  (+11 more)
(+2265 files in other folders)
